--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by JetBrains WebStorm 6.0.1 for binding GitHub repository
+A simple polling server with QR link generation and Socket.IO communication implemented in Node.JS. Meant as a simple example project.
